# snapdantic

./: .gitignore  README.md  pyproject.toml
snapdantic/: __init__.py  base.py  codec.py  db.py  lock.py  types.py  zarr_store.py
tests/: test_base.py  test_codec.py  test_db.py  test_lock.py  test_zarr_store.py
